--- a/HTML/index.html
+++ b/HTML/index.html
@@ -35,6 +35,21 @@
             <figure class="imgs img2">
                 <img src="../Images/cat-cute2.jpg" alt="img1">
             </figure>
+            <figure class="imgs img3">
+                <img src="../Images/18b260edc7649eb97376c1a287714507.jpg" alt="img1">
+            </figure>
+            <figure class="imgs img4">
+                <img src="../Images/2aff6e3b6a29004eedb92e96a3b6ac1d.jpg" alt="img1">
+            </figure>
+            <figure class="imgs img5">
+                <img src="../Images/4ac72b1b71d0cc9d368811a86cd6c0b6.jpg" alt="img1">
+            </figure>
+            <figure class="imgs img6">
+                <img src="../Images/5240b2fad09753a71367b3620e593eb7.jpg" alt="img1">
+            </figure>
+            <figure class="imgs img7">
+                <img src="../Images/759385b3a1b2c8821386136203c9739c.jpg" alt="img1">
+            </figure>
         </section>
     <!-- maint end -->
     
