--- a/HTML/index.html
+++ b/HTML/index.html
@@ -50,6 +50,27 @@
             <figure class="imgs img7">
                 <img src="../Images/759385b3a1b2c8821386136203c9739c.jpg" alt="img1">
             </figure>
+            <figure class="imgs img8">
+                <img src="../Images/83d6ea3aa58cd5b7ea92666092bb5c52.jpg" alt="img1">
+            </figure>
+            <figure class="imgs img9">
+                <img src="../Images/87ae710e5bc771a02893ad7b911cbb14.jpg" alt="img1">
+            </figure>
+            <figure class="imgs img10">
+                <img src="../Images/8a255ac2d2d153614ca0829d3566593c.jpg" alt="img1">
+            </figure>
+            <figure class="imgs img11">
+                <img src="../Images/b506db329f505f5afdab27545e20a0fb.jpg" alt="img1">
+            </figure>
+            <figure class="imgs img12">
+                <img src="../Images/c45a658b6f79d429f6d3275b5914a037.jpg" alt="img1">
+            </figure>
+            <figure class="imgs img13">
+                <img src="../Images/c60762f4bd8bfb287453038d1bcc8ac3.jpg" alt="img1">
+            </figure>
+            <figure class="imgs img14">
+                <img src="../Images/d0fd686d9f97f4c8ee97e6f722f06ccc.jpg" alt="img1">
+            </figure>
         </section>
     <!-- maint end -->
     
